src/css/seatchart.css
/****************/
/* Seat map css */
/****************/

.seatChart-container {
    cursor: default;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    font-family: "RobotoDraft", "Roboto", sans-serif;
    margin: 5px;
    padding: 5px;
}

.seatChart-title {
    margin: 0;
    padding: 10px 0px 0px 0px;
}

.seatChart-title img {
    float: left;
    width: 20px;
    height: auto;
    margin: 0;
    padding: 0;
}

.seatChart-title h3 {
    float: left;
    height: 20px;
    line-height: 20px;
    margin: 0;
    padding: 0px 0px 0px 10px;
}

.seatChart-small-title {
    margin: 0;
    padding: 15px 0px 0px 0px; 
}

.seatChart-row {
    height: 40px;
}

.seatChart-seat {
    position: relative;
    color: white;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 4px;
    height: 30px;
    width: 30px;
    margin: 4px;
    line-height: 30px;
    float: left;
    text-align: center;
    vertical-align: middle;
    font-family: "Lato", sans-serif;
}

.seatChart-front {
    color: #787878;
    border: 1px solid #dfdfdf;
    border-radius: 4px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    -ms-border-radius: 4px;
    /* 30px - 2px because of border */
    height: 28px;
    line-height: 30px;
    margin: 4px;
    float: left;
    text-align: center;
    vertical-align: middle;
    background-color: #f3f3f3;
}

.seatChart-seat.index {
    background-color: transparent;
    color: #4b4949;
}

.seatChart-seat.blank {
    background-color: transparent;
    color: transparent;
}

.seatChart-seat.blank img {
    position: absolute;
    width: 15px;
    height: auto;
    margin: auto;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
}

.seatChart-seat.blank {
    color: transparent;
}

.seatChart-seat {
    color: #FFF;
    line-height: 30px;
    text-align: center;
    font-family: "Lato",sans-serif;
}

.seatChart-container {
    cursor: default;
    font-family: "RobotoDraft","Roboto",sans-serif;
}

.seatChart-seat.available {
    cursor: pointer;
    background-color: #80c2d1;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0 , 0, 0, 0.24);
}

.seatChart-seat.available:hover {
    background-color: #a0d3de;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0 , 0, 0, 0.12);
}

.seatChart-seat.unavailable {
    /* 28px instead of 30px because border adds 2 px in width and height */
    width: 28px;
    height: 28px;
    background-color: #cccccc;
    border: 1px solid #b4b4b4;
    cursor: not-allowed;
}

.seatChart-seat.clicked {
    cursor: pointer;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0 , 0, 0, 0.12);
}

/*******************/
/* Seat legend css */
/*******************/

.seatChart-legend-list {
    list-style-type: none;
    margin: 0;
    padding: 0px 0px 15px 0px;
}

.seatChart-legend-item {
    margin: 0;
    padding: 10px 0px 0px 0px;
    vertical-align: middle;
}

.seatChart-legend-description {
    display: inline-block;
    margin: 0px 0px 0px 10px;
}

.seatChart-seat.legend-style {
    cursor: default;
    float: left;
    width: 20px;
    height: 20px;
    margin: 0;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    pointer-events: none;
}

/*******************/
/*Shopping cart css*/
/*******************/

.seatChart-shopping-cart {
    margin: 15px 0px 0px 0px;
    padding: 0;
}

